--- a/util/pdf-highlight.html
+++ b/util/pdf-highlight.html
@@ -53,7 +53,8 @@ Usage:
         module.src.lastIndexOf("/"),
       ) + "/pdf.worker.mjs";
 
-      const pdf = await pdfjsLib.getDocument(params.get("url")).promise;
+      const url = params.get("url") || window.location.href.replace(".html", ".pdf");
+      const pdf = await pdfjsLib.getDocument(url).promise;
       const page = await pdf.getPage(parseInt(params.get("page") || 1));
 
       const scale = canvas.clientHeight / page.getViewport({ scale: 1 }).height * (window.devicePixelRatio || 1);
